WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
180924
[Attachment Support] The 'webkitattachmentbloburl' attribute should not persist after markup serialization
https://bugs.webkit.org/show_bug.cgi?id=180924
Summary
[Attachment Support] The 'webkitattachmentbloburl' attribute should not persi...
Wenson Hsieh
Reported
2017-12-17 20:42:01 PST
This is a temporary attribute, similar to 'webkitattachmentpath', used to correctly serialize attachment elements. As such, there's no need for it to persist on the attachment. This could lead to strange behavior, for instance, when performing a continuity copy/paste.
Attachments
Dependent on https://bugs.webkit.org/show_bug.cgi?id=180892
(10.65 KB, patch)
2017-12-17 20:57 PST
,
Wenson Hsieh
thorton
: review+
Details
Formatted Diff
Diff
Rebase on master
(10.63 KB, patch)
2017-12-18 20:33 PST
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2017-12-17 20:43:01 PST
<
rdar://problem/36099093
>
Wenson Hsieh
Comment 2
2017-12-17 20:57:20 PST
Created
attachment 329632
[details]
Dependent on
https://bugs.webkit.org/show_bug.cgi?id=180892
Wenson Hsieh
Comment 3
2017-12-18 20:33:05 PST
Created
attachment 329733
[details]
Rebase on master
WebKit Commit Bot
Comment 4
2017-12-18 21:38:51 PST
Comment on
attachment 329733
[details]
Rebase on master Clearing flags on attachment: 329733 Committed
r226097
: <
https://trac.webkit.org/changeset/226097
>
Ryan Haddad
Comment 5
2017-12-19 08:41:00 PST
This change broke the Windows build:
https://build.webkit.org/builders/Apple%20Win%20Release%20%28Build%29/builds/6682
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug